--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "json-server": "json-server --watch db.json --port 4000 --delay 500"
+    "json-server": "json-server --watch db.json --port 8000 --delay 500"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "next": "^10.0.8",
     "react": "^17.0.1",
